# recursivefilter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_gpufilter.sh  deviceQuery output.txt  notes.txt  recursivefilter.xlsx  recursivefiltering.xlsx  run.sh  run_gpufilter.sh
include/recursivefilter/: CpuTable.hpp  Logger.hpp  cpufuncs.hpp  gpufuncs.hpp  utils.hpp
include/recursivefiltering/: Logger.hpp  cpufuncs.hpp  gpufuncs.hpp  utils.hpp
res/: all0x010101.xcf  arbitrary.xcf
src/: CpuTable.cpp  Logger.cpp  cpu_funcs.cpp  cpu_funcs.hpp  cpufuncs.cpp  gpu_funcs.cu  gpu_funcs.hpp  gpufuncs.cu  main.cpp  main.cu  utils.cpp  utils.hpp
test/: helpers.cpp  helpers.hpp  main.cpp  test_CpuTable.cpp  test_cpufuncs.cpp  test_gpufuncs.cpp  test_gpufuncs_checkmath.cpp  test_gpufuncs_filterimages.cpp  test_gpufuncs_measuretime.cpp
